added stage back

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ display: inline-block;
 </head>
 <body>
 <div id="reports" style=> </div> 
+<div class="stage" id="stage1" style="z-index: 1"> 
 
 
 <div class="panel" id="panel1"> 
