--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ display: inline-block;
     <button onclick=game.swichPanels("panel1") id="showPanel1"> Calling</button>
     <button onclick=game.swichPanels("panel2") id="showPanel2"> Conquering</button> 
     <h1> Conquering of the Nations</h1>
-    <h3>How far can you spread? </h3>
+    <h3>Let your seagulls spread the word of the uprising nation! Or... are they flying away? Oh... </h3>
     <table>
         <tr> 
             <td>
@@ -95,17 +95,51 @@ display: inline-block;
                         <td> </td>
                         <td class="resource2Number"></td>
                     </tr>
-
-    </table>
-    <table>
-        <tr>
-            <td>1</td>
-            <td> </td>
-            <td><button class="expand" onclick="game.expand(1, 1)">Seagull</button></td>
+                    <tr>
+                        <td> Kilometer Square of Land Conquered</td>
+                        <td> </td>
+                        <td class="resource4Number"></td>
+                    </tr>
+                </table>
+            </td>
         </tr>
     </table>
-                    
-    
+    <table>
+            <td>5</td>
+            <td> </td>
+            <td><button class="expand" onclick="game.expand(5, 1)">Seagull</button></td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td> </td>
+            <td><button class="expand" onclick="game.expand(10, 1)">Seagull</button></td>
+        </tr>
+        <tr>
+            <td>50</td>
+            <td> </td>
+            <td><button class="expand" onclick="game.expand(50, 1)">Seagull</button></td>
+        </tr>
+        <tr>
+            <td>100</td>
+            <td> </td>
+            <td><button class="expand" onclick="game.expand(100, 1)">Seagull</button></td>
+        </tr>
+        <tr>
+            <td>300</td>
+            <td> </td>
+            <td><button class="expand" onclick="game.expand(300, 1)">Seagull</button></td>
+        </tr>
+        <tr>
+            <td>500</td>
+            <td> </td>
+            <td><button class="expand" onclick="game.expand(500, 1)">Seagull</button></td>
+        </tr>
+        <tr>
+            <td>Send them all!</td>
+            <td> </td>
+            <td><button class="expand" onclick="game.expand(-1, 1)">Seagull</button></td>
+        </tr>
+    </table> 
 </div>
 
 
