--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ display: inline-block;
     <button onclick=game.swichPanels("panel1") id="showPanel1"> Calling</button>
     <button onclick=game.swichPanels("panel2") id="showPanel2"> Conquering</button> 
     <h1> Conquering of the Nations</h1>
-    <h3>Let your seagulls spread the word of the uprising nation! Or... are they flying away? Oh... </h3>
+    <h3>Deploy the seagulls and conquer lands! Or... are they flying away? Oh... Take your chances!</h3>
     <table>
         <tr> 
             <td>
