fixed panel and equation

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ display: inline-block;
 
     <div class="panel" id="panel1"> 
         <h1> <span id=era>Calling of the Gulls</span></h1>
-        <button onclick=game.swichPanels("panel1") id="showPanel1"> Calling</button>
-        <button onclick=game.swichPanels("panel2") id="showPanel2"> Conquering</button>
+        <button onclick="game.swichPanels('panel1')" id="showPanel1"> Calling</button>
+        <button onclick="game.swichPanels('panel2')" id="showPanel2"> Conquering</button>
         <table>
             <tr> 
                 <td>
@@ -66,7 +66,7 @@ display: inline-block;
                             <td>
                                 <button onclick=game.gainResource3()> Train Seagull</button>
                             </td>
-                            <td>Cost 1 Seagull + 3 Food; 1 Food found every 10 seconds</td>
+                            <td>Cost 1 Seagull + 3 Food; 2 Food found every second</td>
                         </tr>
         </table>
     </div>
@@ -77,8 +77,8 @@ display: inline-block;
 
 <!-- delete the following 2 panels if you structuring with sequential stages -->
 <div class="panel"  id="panel2">
-    <button onclick=game.swichPanels("panel1") id="showPanel1"> Calling</button>
-    <button onclick=game.swichPanels("panel2") id="showPanel2"> Conquering</button> 
+    <button onclick="game.swichPanels('panel1')" id="showPanel1"> Calling</button>
+    <button onclick="game.swichPanels('panel2')" id="showPanel2"> Conquering</button> 
     <h1> Conquering of the Nations</h1>
     <h3>Deploy the seagulls and conquer lands! Or... are they flying away? Oh... Take your chances!</h3>
     <table>
@@ -95,7 +95,7 @@ display: inline-block;
                         <td> </td>
                         <td class="resource2Number"></td>
                     </tr>
-                    <tr>
+                    <tr id="resource4Display">
                         <td> Kilometer Square of Land Conquered</td>
                         <td> </td>
                         <td class="resource4Number"></td>
@@ -107,37 +107,37 @@ display: inline-block;
     <table>
             <td>5</td>
             <td> </td>
-            <td><button class="expand" onclick="game.expand(5, 1)">Seagull</button></td>
+            <td><button class="expand" onclick="game.expand(5)">Seagull</button></td>
         </tr>
         <tr>
             <td>10</td>
             <td> </td>
-            <td><button class="expand" onclick="game.expand(10, 1)">Seagull</button></td>
+            <td><button class="expand" onclick="game.expand(10)">Seagull</button></td>
         </tr>
         <tr>
             <td>50</td>
             <td> </td>
-            <td><button class="expand" onclick="game.expand(50, 1)">Seagull</button></td>
+            <td><button class="expand" onclick="game.expand(50)">Seagull</button></td>
         </tr>
         <tr>
             <td>100</td>
             <td> </td>
-            <td><button class="expand" onclick="game.expand(100, 1)">Seagull</button></td>
+            <td><button class="expand" onclick="game.expand(100)">Seagull</button></td>
         </tr>
         <tr>
             <td>300</td>
             <td> </td>
-            <td><button class="expand" onclick="game.expand(300, 1)">Seagull</button></td>
+            <td><button class="expand" onclick="game.expand(300)">Seagull</button></td>
         </tr>
         <tr>
             <td>500</td>
             <td> </td>
-            <td><button class="expand" onclick="game.expand(500, 1)">Seagull</button></td>
+            <td><button class="expand" onclick="game.expand(500)">Seagull</button></td>
         </tr>
         <tr>
             <td>Send them all!</td>
             <td> </td>
-            <td><button class="expand" onclick="game.expand(-1, 1)">Seagull</button></td>
+            <td><button class="expand" onclick="game.expand(-1)">Seagull</button></td>
         </tr>
     </table> 
 </div>
